# medical-chatbot

./: LICENSE  README.md  app.py  project_draft.md  pyproject.toml  requirements.txt  setup.py  store_index.py  template.sh
research/: demo.ipynb
src/: helper.py  prompt.py
